login-form.js fixed:  - input::before text jumping  - Safari displaying the before as focused - added placeholder text

--- a/google-test-family/components/login/login-form/login-form.module.scss
+++ b/google-test-family/components/login/login-form/login-form.module.scss
@@ -60,9 +60,7 @@
 
     &:has(input:focus)::before,
     &:has(input:not(:placeholder-shown))::before {
-      top: 0;
-      left: 0;
-      translate: 20% -20%;
+      top: 8%;
 
       background-color: white;
 
